--- a/style.css
+++ b/style.css
@@ -611,7 +611,7 @@ body {
 .carousel3 .carouselborder div {
     position: absolute;
     top: 0;
-    left: calc(100vw / 50 * 4);
+    right: 301px;
     width: 15px;
     height: 402px;
     background: linear-gradient(#8cc63f, #ffff00);
