ブログページ調整

--- a/responsive.css
+++ b/responsive.css
@@ -613,14 +613,8 @@
 
 
 /* -------------------------------------------------------------------------------- */
-/*	8. Archive Page
+/*	8. Active Page
 /* -------------------------------------------------------------------------------- */
-
-
-/* -------------------------------------------------------------------------------- */
-/*	9. Single Page
-/* -------------------------------------------------------------------------------- */
-
 @media screen and (max-width: 575.98px) {
     .contact-container {
         padding-bottom: 100px !important;
@@ -950,6 +944,23 @@
 @media screen and (min-width:1200px){}
 
 /* -------------------------------------------------------------------------------- */
+/*	9. Single Page
+/* -------------------------------------------------------------------------------- */
+@media screen and (max-width: 575.98px) {
+}
+@media screen and (min-width: 576px) and (max-width: 767.98px){
+}
+@media screen and (min-width: 768px) and (max-width: 991.98px){
+}
+@media screen and (min-width: 992px) and (max-width: 1199.98px){
+    .single-img img {
+        max-width: 620px;
+    }
+}
+@media screen and (min-width:1200px){}
+
+
+/* -------------------------------------------------------------------------------- */
 /*	10. Font
 /* -------------------------------------------------------------------------------- */
 
@@ -958,8 +969,25 @@
 /* -------------------------------------------------------------------------------- */
 /*	11. Sidebar
 /* -------------------------------------------------------------------------------- */
-
-
+@media screen and (max-width: 575.98px) {
+}
+@media screen and (min-width: 576px) and (max-width: 767.98px){
+}
+@media screen and (min-width: 768px) and (max-width: 991.98px){
+}
+@media screen and (min-width: 992px) and (max-width: 1199.98px){
+    .single-side {
+        padding-top: 45px;
+        padding-left: 41px;
+    }
+}
+@media screen and (min-width:1200px){
+    .single-side {
+        padding-top: 30px;
+        padding-left: 58px;
+        padding-right: 0px;
+    }
+}
 /* -------------------------------------------------------------------------------- */
 /*	12. Footer
 /* -------------------------------------------------------------------------------- */
