--- a/responsive.css
+++ b/responsive.css
@@ -408,8 +408,13 @@
         top: calc(100vw / 50 * 75);
         left: 0;
     }
+    #section03 h2 {
+        position: static;
+        padding-left: 2rem;
+    }
     #section03 video {
         width: 100%;
+        position: static;
     }
     /*セクション４のスタイル*/
     #section04 {
