--- a/style.css
+++ b/style.css
@@ -1295,15 +1295,58 @@ input[type="checkbox"]:checked + .archive-year {
     padding-bottom: 150px;
 }
 .archive-btn a {
+    font-weight: 500;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 30px;
     padding-right: 120px;
     background-color: #0e1827;
+    border: 1px solid #0e1827;
     transition: .3s;
 }
 .archive-btn a:hover {
-    opacity: .6;
+    color: #0e1827 !important;
+    background-color: #fff;
+}
+.pagination-box {
+    max-width: 650px
+}
+.pagination {
+    display: inline-block;
+}
+.page-numbers {
+    color: #fff;
+    font-weight: 500;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 22.5px;
+    padding-right: 22.5px;
+    background-color: #0e1827;
+    cursor :pointer;
+    transition: .3s;
+}
+.page-numbers:hover {
+    color: #0e1827;
+    background-color: #f2f2f2;
+}
+.pagination-next {
+    display: inline-block;
+}
+.pagination-next:after {
+    content: "";
+    position: relative;
+    top: -4px;
+    font-size: 0;
+    border-style: solid;
+    border-width: 42px 0 42px 35px;
+    border-color: transparent transparent transparent #0e1827;
+    transition: .3s;
+}
+.pagination-next:hover:after {
+    border-color: transparent transparent transparent #f2f2f2;
+}
+.pagination-next:hover:after + .page-numbers {
+    border-color: transparent transparent transparent #f2f2f2;
 }
 /*---------------------------------------------
  8.footerのスタイル
