--- a/style.css
+++ b/style.css
@@ -1280,6 +1280,7 @@ input[type="checkbox"]:checked + .archive-year {
     font-size: 20px;
 }
 .tegs-box a {
+    display: block;
     font-size: 16px !important;
     color: #0e1827;
     transition: .3s;
@@ -1316,7 +1317,7 @@ input[type="checkbox"]:checked + .archive-year {
 }
 .page-numbers {
     color: #fff;
-    font-weight: 500;
+    font-weight: 600;
     padding-top: 30px;
     padding-bottom: 30px;
     padding-left: 22.5px;
@@ -1345,8 +1346,15 @@ input[type="checkbox"]:checked + .archive-year {
 .pagination-next:hover:after {
     border-color: transparent transparent transparent #f2f2f2;
 }
-.pagination-next:hover:after + .page-numbers {
-    border-color: transparent transparent transparent #f2f2f2;
+.pagination-next::after:hover > .page-numbers {
+    color: #0e1827;
+    background-color: #f2f2f2;
+}
+.search-title {
+    font-size: 24px;
+    font-weight: 500;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 /*---------------------------------------------
  8.footerのスタイル
