--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ Version: 1.0
 4.page
     4-1.会社概要
     4-2.Ａ型事業所＆Ｂ型事業所
+    4-3.404ページ
 5.single
 6.footer
 -------------------------------------------------------------*/
@@ -1111,6 +1112,11 @@ input[type=radio] {
     width: 100%;
     height: 100%;
     text-indent: -999px;
+}
+/* 404のスタイル */
+#back2top {
+    margin-left: calc(100vw / 50 * 5);
+    margin-right: calc(100vw / 50 * 5);
 }
 /*---------------------------------
 6.singleのスタイル 
