レスポンシブ調整

--- a/responsive.css
+++ b/responsive.css
@@ -1084,7 +1084,11 @@
 /* -------------------------------------------------------------------------------- */
 @media screen and (max-width: 575.98px) {
     .single-title {
+        font-size: 24px;
         line-height: 1.3;
+    }
+    .search-title {
+        font-size: 18px;
     }
     .single-sub p {
         font-size: 16px;
@@ -1105,16 +1109,37 @@
     .archive-box a {
         font-size: 14px;
     }
+    .archive-btn a {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-right: 80px;
+    }
     .pagination-box {
         height: 120px;
     }
+    .page-numbers {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
     .pagination-next:after {
-        border-width: 38px 0 38px 30px;
+        border-width: 28px 0 29px 20px;
+    }
+    .rpr60 {
+        padding-right: 60px;
+    }
+    .rpb100 {
+        padding-bottom: 100px;
     }
 }
 @media screen and (min-width: 576px) and (max-width: 767.98px){
     .single-title {
+        font-size: 24px;
         line-height: 1.3;
+    }
+    .search-title {
+        font-size: 18px;
     }
     .single-sub p {
         font-size: 16px;
@@ -1139,7 +1164,13 @@
         height: 120px;
     }
     .pagination-next:after {
-        border-width: 41px 0 40px 30px;
+        border-width: 38px 0 39px 30px;
+    }
+    .rpr60 {
+        padding-right: 60px;
+    }
+    .rpb100 {
+        padding-bottom: 100px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 991.98px){
