--- a/style.css
+++ b/style.css
@@ -504,6 +504,10 @@ body {
     display: block;
 }
 
+.ipppo-logo {
+    height: 100px;
+}
+
 /*---------------------------
  3.front-pageのスタイル 
 -----------------------------*/
