--- a/responsive.css
+++ b/responsive.css
@@ -133,6 +133,21 @@
         right: calc(100vw / 50 * 4);
     }
 }
+@media screen and (min-width: 768px) and (max-width: 991.98px){
+    .ipppo-logo {
+        height: auto;
+    }
+}
+@media screen and (min-width: 576px) and (max-width: 767.98px){
+    .ipppo-logo {
+        height: auto;
+    }
+}
+@media screen and (max-width: 575.98px) {
+    .ipppo-logo {
+        height: auto;
+    }
+}
 
 /* -------------------------------------------------------------------------------- */
 /*	5. Menu Navigation
