ブログスマホサイズ調整

--- a/responsive.css
+++ b/responsive.css
@@ -1106,7 +1106,7 @@
         font-size: 18px;
     }
     .single-sub p {
-        font-size: 16px;
+        font-size: 14px;
     }
     .single-time {
         display: block !important;
@@ -1140,6 +1140,9 @@
     }
     .pagination-next:after {
         border-width: 28px 0 29px 20px;
+    }
+    .pagination-prev:before {
+        border-width: 28px 20px 29px 0;
     }
     .rpr60 {
         padding-right: 60px;
@@ -1180,6 +1183,9 @@
     }
     .pagination-next:after {
         border-width: 38px 0 39px 30px;
+    }
+    .pagination-prev:before {
+        border-width: 38px 30px 39px 0;
     }
     .rpr60 {
         padding-right: 60px;
