--- a/responsive.css
+++ b/responsive.css
@@ -1218,8 +1218,32 @@
 /*	11. Sidebar
 /* -------------------------------------------------------------------------------- */
 @media screen and (max-width: 575.98px) {
+    .archive-title {
+        font-size: 20px;
+    }
+    .archive-box label {
+        font-size: 20px;
+    }
+    .tegs-box p {
+        font-size: 18px;
+    }
+    .tegs-box a {
+        font-size: 14px !important;
+    }
 }
 @media screen and (min-width: 576px) and (max-width: 767.98px){
+    .archive-title {
+        font-size: 20px;
+    }
+    .archive-box label {
+        font-size: 20px;
+    }
+    .tegs-box p {
+        font-size: 18px;
+    }
+    .tegs-box a {
+        font-size: 14px !important;
+    }
 }
 @media screen and (min-width: 768px) and (max-width: 991.98px){
 }
